# Obelisk-Scrappy

./: README.md  default.nix
backend/: backend.cabal
backend/src/: #FrontendTwo.hs#  #Types.hs#  .#FrontendTwo.hs  Backend.hs  BuildActions.hs  Concurrencies.hs  Find.hs  FrontendTwo.hs  FrontendTwo.hs~  Links.hs  Requests.hs  Scrape.hs  Types.hs  t.html  t.html~
backend/src/Elem/: #ITextElem.hs#  #SimpleElemParser.hs#  #Types.hs#  .#ITextElem.hs  .#SimpleElemParser.hs  ChainHTML.hs  ChainHTML.hs~  ElemHeadParse.hs~  ITextElem.hs~  ITextElemParser.hs  ITextElemParser.hs~  SimpleElemParser.hs~  TreeElemParser-Notes.txt  TreeElemParser-Notes.txt~  TreeElemParser.hs  TreeElemParser.hs.save  TreeElemParser.hs~  Types.hs  Types.hs~
common/src/Common/: Route.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs  Frontend.hs~
